no tempest on productive regions - unblock seeds in these regions

--- a/openstack/designate/templates/seeds.yaml
+++ b/openstack/designate/templates/seeds.yaml
@@ -23,7 +23,9 @@ spec:
   - monsoon3/domain-monsoon3-seed
   - monsoon3/domain-s4-seed
   - monsoon3/domain-wbs-seed
+{{- if .Values.tempest.enabled }}
   - monsoon3/domain-tempest-seed
+{{- end }}
 
   roles:
   - cloud_dns_admin
@@ -316,6 +318,7 @@ spec:
       role: cloud_dns_admin
       inherited: true
 
+{{- if .Values.tempest.enabled }}
   - name: tempest
     dns_quota:
       api_export_size: 2000
@@ -357,5 +360,6 @@ spec:
         role: cloud_dns_ops
       - domain: tempest
         role: cloud_dns_ops
+{{- end }}
 
 {{- end }}
