--- a/openstack/elektra/templates/seed.yaml
+++ b/openstack/elektra/templates/seed.yaml
@@ -19,7 +19,9 @@ spec:
   - monsoon3/domain-hec-seed
   - monsoon3/domain-monsoon3-seed
   - monsoon3/domain-s4-seed
+{{- if .Values.tempest.enabled }}
   - monsoon3/domain-tempest-seed
+{{- end }}
   - monsoon3/domain-wbs-seed
   - monsoon3/domain-cc3test-seed
 
@@ -82,8 +84,10 @@ spec:
         role: admin
       - domain: s4
         role: admin
+{{- if .Values.tempest.enabled }}
       - domain: tempest
         role: admin
+{{- end }}
       - domain: wbs
         role: admin
       - domain: cc3test
