--- a/openstack/ironic/values.yaml
+++ b/openstack/ironic/values.yaml
@@ -17,6 +17,9 @@ global:
   fernetRouter:
     image: "monsoon/fernet-router:latest"
 
+tempest:
+  enabled: false
+
 osprofiler:
     enabled: false
 
