--- a/openstack/ironic/templates/seed.yaml
+++ b/openstack/ironic/templates/seed.yaml
@@ -16,7 +16,7 @@ spec:
   - monsoon3/domain-monsoon3-seed
   - monsoon3/domain-s4-seed
   - monsoon3/domain-wbs-seed
-{{- if .Values.tempest.enabled }}
+{{- if .Values.tempest_enabled }}
   - monsoon3/domain-tempest-seed
 {{- end }}
   - monsoon3/nova-seed
@@ -250,7 +250,7 @@ spec:
       description: IPMI Exporter for MB Monitoring
       password: {{ .Values.global.ipmi_exporter_user_passwd | default (tuple . .Values.global.ipmi_exporter_user_passwd | include "identity.password_for_user") | quote }}
 
-{{- if .Values.tempest.enabled }}
+{{- if .Values.tempest_enabled }}
   - name: tempest
     projects:
     - name: tempest1
