--- a/openstack/barbican/values.yaml
+++ b/openstack/barbican/values.yaml
@@ -27,9 +27,6 @@ pod:
 api_port_internal: '9311'
 debug: "True"
 
-dbName: barbican
-dbPassword: null
-
 statsd:
   port: 9102
   image:
@@ -46,7 +43,7 @@ pg_cluster:
 postgresql:
   imageTag: '9.4.14'
   postgresDatabase: barbican
-  postgresPassword: null
+#  postgresPassword: null
   dbInit: barbican-db-init
   dbMaintain: barbican-db-maintain
   pgbouncer:
@@ -57,8 +54,7 @@ postgresql:
   backup:
     enabled: true
     metrics: true
-    os_password: null
-
+#    os_password: null
   resources:
     requests:
       cpu: "500m" # 1/2 cpu
@@ -130,15 +126,8 @@ pgmetrics:
             description: "Project ID of the secret"
 
 rabbitmq:
-  users:
-    default:
-      password: null
-    admin:
-      password: null
   persistence:
     enabled: false
-  metrics:
-    password: null
 
 logging:
     formatters:
