[common][pgmetrics] apply during helm upgrade
not on initial install

--- a/common/pgmetrics/templates/deployment.yaml
+++ b/common/pgmetrics/templates/deployment.yaml
@@ -1,3 +1,4 @@
+{{- if .Release.IsUpgrade }}
 kind: Deployment
 apiVersion: extensions/v1beta1
 metadata:
@@ -92,3 +93,4 @@ spec:
           - key: custom-metrics.yaml
             path: custom-metrics.yaml
       {{- end }}
+{{- end }}
