[manila] apply nanny during helm upgrade
not on initial install

--- a/openstack/manila/templates/nanny-deployment.yaml
+++ b/openstack/manila/templates/nanny-deployment.yaml
@@ -1,3 +1,4 @@
+{{- if .Release.IsUpgrade }}
 {{- if .Values.nanny.enabled }}
 {{- if or .Values.nanny.db_purge.enabled .Values.nanny.quota_sync.enabled .Values.nanny.db_cleanup.enabled }}
 apiVersion: extensions/v1beta1
@@ -128,6 +129,7 @@ spec:
           resources:
 {{ toYaml .Values.pod.resources.nanny | indent 13 }}
           {{- end }}
+{{- end }}
 {{- end }}
 {{- end }}
 {{- end }}
