--- a/openstack/manila/templates/migration-job.yaml
+++ b/openstack/manila/templates/migration-job.yaml
@@ -7,7 +7,7 @@ metadata:
     type: configuration
     component: manila
   annotations:
-    "helm.sh/hook": "pre-upgrade"
+    "helm.sh/hook": "post-install,pre-upgrade"
     "helm.sh/hook-weight": "-1"
     "helm.sh/hook-delete-policy": "before-hook-creation"
 spec:
