fix maia chart lint messages

--- a/openstack/maia/values.yaml
+++ b/openstack/maia/values.yaml
@@ -1,4 +1,4 @@
-global:
+# global:
   # region: DEFINED-IN-REGION-SECRETS
   # domain: DEFINED-IN-REGION-SECRETS
   # imageRegistry: DEFINED-IN-REGION-SECRETS
