modification in slack_nannies route
nannies route got a filter to ignore severity 'ignore_info' on request of route owner

--- a/global/prometheus-alertmanager/templates/config.yaml
+++ b/global/prometheus-alertmanager/templates/config.yaml
@@ -60,7 +60,8 @@ data:
       - receiver: slack_nannies
         continue: true
         match_re:
-          context: nanny 
+          context: nanny
+          severity: ((?!ignore_info).)*
 
       # owner: Michael Schmidt / Fabian Ruff
       - receiver: slack_k8s
