--- a/openstack/cinder/templates/api-service.yaml
+++ b/openstack/cinder/templates/api-service.yaml
@@ -16,4 +16,4 @@ spec:
     name: cinder-api
   ports:
     - name: cinder-api
-      port: {{ .Values.cinderApiPortInternal | quote }}
+      port: {{ .Values.cinderApiPortInternal }}
