--- a/openstack/maia/templates/maia-deployment.yaml
+++ b/openstack/maia/templates/maia-deployment.yaml
@@ -41,7 +41,7 @@ spec:
           args: ["serve"]
           env:
             - name: MAIA_DEBUG
-              value: {{ $.Values.maia.debug }}
+              value: {{ $.Values.maia.debug | quote }}
           resources:
               requests:
                   memory: "50Mi"
