--- a/openstack/keystone/values.yaml
+++ b/openstack/keystone/values.yaml
@@ -242,12 +242,18 @@ rabbitmq:
 
 
 postgresql:
+  custom_repository: true
+  imageTag: "9.4.14"
+
   postgresDatabase: keystone
   postgresUser: postgres
   postgresPassword: ""
 
   dbInit: keystone-db-init
   dbMaintain: keystone-db-maintain
+
+  metrics:
+    enabled: true
 
   persistence:
     enabled: false
