--- a/global/prometheus-alertmanager/templates/config.yaml
+++ b/global/prometheus-alertmanager/templates/config.yaml
@@ -61,7 +61,7 @@ data:
         continue: true
         match_re:
           context: nanny
-          severity: ((?!ignore_info).)*
+          severity: critical|warning|info
 
       # owner: Michael Schmidt / Fabian Ruff
       - receiver: slack_k8s
