--- a/openstack/glance/values.yaml
+++ b/openstack/glance/values.yaml
@@ -128,6 +128,7 @@ pgmetrics:
              description: "Image Count"
 
 postgresql:
+  custom_repository: true
   imageTag: '9.4.14'
   postgresDatabase: glance
   dbUser: glance
