Add dashboard user admin role in cp domain

--- a/openstack/elektra/templates/seed.yaml
+++ b/openstack/elektra/templates/seed.yaml
@@ -70,6 +70,8 @@ spec:
         role: admin
       - domain: ccadmin
         role: admin
+      - domain: cp
+        role: admin
       - domain: bs
         role: admin
       - domain: fsn
