--- a/openstack/backup-replication/templates/replication-deployment.yaml
+++ b/openstack/backup-replication/templates/replication-deployment.yaml
@@ -34,7 +34,7 @@ spec:
         image: {{include "swift_http_import_image" $}}
         imagePullPolicy: {{ $.Values.swift_http_import.image_pull_policy }}
         command:
-        - /usr/bin/dumb-init
+        - /sbin/tini
         args:
         - /bin-backup-replication/sleep-for
         - {{ $.Values.swift_http_import.sleep_for | quote }}
