--- a/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
+++ b/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
@@ -101,7 +101,7 @@ data:
           - '{__name__=~"^canary_.+"}'
           - '{__name__=~"^concourse_.+"}'
           - '{__name__=~"^cinder_nanny_.+"}'
-          - '{__name__=~"^container_cpu_cfs_throttled.+"}'
+          - '{__name__=~"^container_cpu_cfs_.+"}'
           - '{__name__=~"^container_fs.+"}'
           - '{__name__=~"^container_memory_.+"}'
           - '{__name__=~"^container_network_.+"}'
