--- a/openstack/neutron/values.yaml
+++ b/openstack/neutron/values.yaml
@@ -275,6 +275,9 @@ pgmetrics:
           description: "Seconds since the last heartbeat"
 
 postgresql:
+  custom_repository: true
+  imageTag: "9.4.14"
+  
   postgresDatabase: neutron
   # postgresPassword:
   dbInit: neutron-db-init
