--- a/system/prometheus-server/values.yaml
+++ b/system/prometheus-server/values.yaml
@@ -2,12 +2,12 @@ global:
   # The OpenStack region.
   region:
 
-  # The domain used to build the hostname.
+  # The TLD as used in the URL.
   domain:
 
-  # The type of the cluster to which the Prometheus is deployed.
+  # Optional type of the cluster to which the Prometheus is deployed.
   # Choose between: controlplane, kubernikus-controlplane, kubernikus-scaleout.
-  clusterType:
+  # clusterType:
 
   # Optional name of the cluster to which the Prometheus is deployed.
   # Defaults to region if not set.
