configurable external labels

--- a/system/prometheus-server/templates/prometheus-server.yaml
+++ b/system/prometheus-server/templates/prometheus-server.yaml
@@ -37,6 +37,9 @@ spec:
     {{- if .Values.global.clusterType }}
     cluster_type: {{ required ".Values.global.clusterType missing" .Values.global.clusterType }}
     {{- end }}
+    {{- if .Values.externalLabels }}
+{{ toYaml .Values.externalLabels | indent 4 }}
+    {{- end }}
 
   {{ if .Values.additionalScrapeConfigs -}}
   # Inject additional scrape configurations.
