--- a/system/prometheus-server/values.yaml
+++ b/system/prometheus-server/values.yaml
@@ -75,6 +75,11 @@ serviceAccount:
 # Optional Thanos sidecar configuration.
 thanos: {}
 
+# The labels to add to any time series or alerts when communicating with
+# external systems (federation, remote storage, Alertmanager).
+externalLabels: {}
+  # labelName: labelValue
+
 # The log level of the Prometheus.
 logLevel: info
 
