--- a/openstack/maia/values.yaml
+++ b/openstack/maia/values.yaml
@@ -1,7 +1,9 @@
-# global:
+global:
   # region: DEFINED-IN-REGION-SECRETS
   # domain: DEFINED-IN-REGION-SECRETS
   # imageRegistry: DEFINED-IN-REGION-SECRETS
+  clusterType: controlplane 
+  
 maia:
   # maia is on in all regions by default
   enabled: True
@@ -36,6 +38,49 @@ maia:
       expected: "10m"
       tolerated: "500m"
 
+# this is the new reused prometheus
+prometheus-server:
+  image:
+    repository: prom/prometheus
+    tag: v2.8.0
+
+  name: maia-collector
+
+  retentionTime: 30d
+
+  additionalScrapeConfigs:
+    - name: prometheus-maia
+      key: prometheus.yaml
+
+  ingress:
+    enabled: true
+    host: maia-prometheus-collector
+
+  # Store in memory.
+  persistence:
+    enabled: true
+
+  rbac:
+    create: false
+
+  serviceAccount:
+    create: false
+    name: default
+
+  # The log level of the Prometheus.
+  logLevel: info
+
+  # Kubernetes resource requests and limits for this Prometheus.
+  # Flagship configuration for now.
+  resources:
+    requests:
+      cpu: 2
+      memory: 8Gi
+    limits:
+      cpu: 4
+      memory: 16Gi
+
+# this is the old homegrown prometheus
 prometheus:
   enabled: True
   vice_president: true
