--- a/openstack/elk/templates/es-data.yaml
+++ b/openstack/elk/templates/es-data.yaml
@@ -68,7 +68,7 @@ spec:
             - name: READONLYREST_ENABLE
               value: "false"
             - name: ES_JAVA_OPTS
-              value: "-XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=75 -XX:+UseCMSInitiatingOccupancyOnly -XX:MaxGCPauseMillis=500 -Xms10g -Xmx10g"
+              value: "-XX:MaxRAM=100g -XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=75 -XX:+UseCMSInitiatingOccupancyOnly -XX:MaxGCPauseMillis=500 -Xms10g -Xmx10g"
           securityContext:
             capabilities:
               add:
