fix ingress. clarify additionalScrapeConfigs may be a list

--- a/system/prometheus-server/templates/ingress.yaml
+++ b/system/prometheus-server/templates/ingress.yaml
@@ -19,5 +19,5 @@ spec:
             servicePort: 9090
   tls:
     - secretName: tls-{{ include "prometheus.externalURL" . | replace "." "-" }}
-      hosts: [https://{{ include "prometheus.externalURL" . }}]
+      hosts: [{{ include "prometheus.externalURL" . }}]
 {{ end }}
