--- a/system/prometheus-server/values.yaml
+++ b/system/prometheus-server/values.yaml
@@ -29,8 +29,8 @@ retentionTime: 7d
 # Reference secrets containing additional Prometheus scrape configurations.
 # Injecting an invalid configuration might break the Prometheus server instance.
 additionalScrapeConfigs:
-  # name:
-  # key:
+  # - name: < secret name >
+  #   key:  < key in secret >
 
 # Optional ingress for this Prometheus.
 ingress:
