--- a/openstack/barbican/values.yaml
+++ b/openstack/barbican/values.yaml
@@ -41,6 +41,7 @@ pg_cluster:
     backup_schedule: "* * * * *"
 
 postgresql:
+  custom_repository: true
   imageTag: '9.4.21'
   postgresDatabase: barbican
 #  postgresPassword: null
