Default to Flock Protected Image

--- a/common/postgresql/values.yaml
+++ b/common/postgresql/values.yaml
@@ -39,7 +39,7 @@ global:
 
 custom_configmap: false
 ## if custom repository is enabled it takes global/imageRegistry and global/imageNamespace
-custom_repository: false
+custom_repository: true
 
 extensions:
   pg_stat_statements:
@@ -51,7 +51,7 @@ image: "postgres"
 ## postgres image version
 ## ref: https://hub.docker.com/r/library/postgres/tags/
 ##
-imageTag: "9.5.4"
+imageTag: "9.5.10"
 
 ## Specify a imagePullPolicy
 ## 'Always' if imageTag is 'latest', else set to 'IfNotPresent'
