Update to concourse 5.0.1, rename workers

--- a/global/concourse/templates/daemonset.yaml
+++ b/global/concourse/templates/daemonset.yaml
@@ -18,8 +18,6 @@ spec:
       labels:
         app: {{ $.Values.worker.name }}-{{ .name }}
         release: "{{ $.Release.Name }}"
-      annotations:
-        checksum/pre-stop: {{ include (print $.Template.BasePath "/retire-worker-config.yaml") . | sha256sum }}
     spec:
       nodeSelector:
         ccloud.sap.com/nodepool: {{ .nodePool | quote }}
@@ -138,7 +136,7 @@ spec:
         - -ce
         - |-
           update-ca-certificates &&
-          /usr/local/concourse/bin/concourse worker --tag="node=${NODE_NAME}"
+          /usr/local/concourse/bin/concourse worker --name=${NODE_NAME}
         livenessProbe:
           failureThreshold: 5
           initialDelaySeconds: 10
