adds resource.requests to kube-state-metrics, node-exporter

--- a/system/kube-monitoring/values.yaml
+++ b/system/kube-monitoring/values.yaml
@@ -57,13 +57,10 @@ prometheus-node-exporter:
       mountPath: /var/run/dbus/system_bus_socket
       readOnly: true
 
-  #  resources:
-  #    requests:
-  #      memory: 60Mi
-  #      cpu: 100m
-  #    limits:
-  #      memory: 100Mi
-  #      cpu: 200m
+    resources:
+      requests:
+        memory: 100Mi
+        cpu: 100m
 
 kube-state-metrics:
   podAnnotations:
@@ -79,6 +76,11 @@ kube-state-metrics:
     cronjobs: false
     # not available in k8s1.7
     horizontalpodautoscalers: false
+
+  resources:
+    requests:
+      memory: 150Mi
+      cpu: 100m
 
 fluent-bit:
   enabled: false
