--- a/system/kube-monitoring/values.yaml
+++ b/system/kube-monitoring/values.yaml
@@ -66,15 +66,19 @@ kube-state-metrics:
   podAnnotations:
     prometheus.io/scrape: "true"
     prometheus.io/port: "8080"
+    prometheus.io/port_1: "8081"
+
+  image:
+    repository: sapcc/kube-state-metrics
 
   rbac:
     create: false
     serviceAccountName: default
 
   collectors:
-    # disabled for now
-    cronjobs: false
+    secrets: false
     # not available in k8s1.7
+    cronjobs: false
     horizontalpodautoscalers: false
 
   resources:
