externalize scrape-config

--- a/openstack/maia/values.yaml
+++ b/openstack/maia/values.yaml
@@ -134,7 +134,7 @@ prometheus-server:
 
   additionalScrapeConfigs:
     - name: prometheus-maia
-      key: prometheus.yaml
+      key: maia_scrape_config.yaml
 
   ingress:
     enabled: true
