externalize scrape-config

--- a/openstack/maia/templates/prometheus-deployment.yaml
+++ b/openstack/maia/templates/prometheus-deployment.yaml
@@ -40,8 +40,10 @@ spec:
           resources:
               requests:
                   memory: {{ .Values.prometheus.resources.memory.expected }}
+                  cpu: {{ .Values.prometheus.resources.cpu.expected }}
               limits:
                   memory: {{ .Values.prometheus.resources.memory.tolerated }}
+                  cpu: {{ .Values.prometheus.resources.cpu.tolerated }}
           ports:
             - name: http
               containerPort: {{ .Values.prometheus.listen_port }}
