externalize scrape-config

--- a/openstack/maia/templates/maia-deployment.yaml
+++ b/openstack/maia/templates/maia-deployment.yaml
@@ -45,8 +45,10 @@ spec:
           resources:
               requests:
                   memory: "50Mi"
+                  cpu: 100m
               limits:
                   memory: "100Mi"
+                  cpu: 2000m
           volumeMounts:
             - mountPath: /etc/maia
               name: maia-etc
