--- a/openstack/maia/values.yaml
+++ b/openstack/maia/values.yaml
@@ -2,8 +2,8 @@ global:
   # region: DEFINED-IN-REGION-SECRETS
   # domain: DEFINED-IN-REGION-SECRETS
   # imageRegistry: DEFINED-IN-REGION-SECRETS
-  clusterType: controlplane 
-  
+  clusterType: controlplane
+
 maia:
   # maia is on in all regions by default
   enabled: True
@@ -41,7 +41,7 @@ prometheus-server:
 
   additionalScrapeConfigs:
     - name: prometheus-maia
-      key: prometheus.yaml
+      key: maia_scrape_config.yaml
 
   ingress:
     enabled: true
@@ -94,6 +94,9 @@ prometheus:
     memory:
       expected: 4Gi
       tolerated: 8Gi
+    cpu:
+      expected: 0.25
+      tolerated: 4
 
 snmp_exporter:
   listen_port: 9116
