--- a/system/kube-monitoring/values.yaml
+++ b/system/kube-monitoring/values.yaml
@@ -76,6 +76,8 @@ kube-state-metrics:
     serviceAccountName: default
 
   collectors:
+    # not useful
+    configmaps: false
     secrets: false
     # not available in k8s1.7
     cronjobs: false
