move scrape-config into secret

--- a/openstack/maia/values.yaml
+++ b/openstack/maia/values.yaml
@@ -40,7 +40,7 @@ prometheus-server:
   retentionTime: 30d
 
   additionalScrapeConfigs:
-    - name: prometheus-maia
+    - name: maia
       key: maia_scrape_config.yaml
 
   ingress:
