--- a/openstack/maia/templates/maia-secrets.yaml
+++ b/openstack/maia/templates/maia-secrets.yaml
@@ -1,5 +1,4 @@
 {{- if .Values.maia.enabled }}
-{{- if .Values.maia.tls_crt }}
 apiVersion: v1
 kind: Secret
 type: Opaque
@@ -8,8 +7,10 @@ metadata:
   name: maia
 
 data:
+{{- if .Values.maia.tls_crt }}
   # the TLS cert will be provided by vice-president, we just need empty shells
-  tls.crt: {{ default "" .Values.maia.tls_crt | b64enc | quote }} 
+  tls.crt: {{ default "" .Values.maia.tls_crt | b64enc | quote }}
   tls.key: {{ default "" .Values.maia.tls_key | b64enc | quote }}
 {{- end }}
+  maia_scrape_config.yaml: {{ include "maia/templates/etc/_prometheus.yaml.tpl" . | b64enc | quote }}
 {{- end }}
