--- a/openstack/maia/values.yaml
+++ b/openstack/maia/values.yaml
@@ -133,7 +133,7 @@ prometheus-server:
   retentionTime: 30d
 
   additionalScrapeConfigs:
-    - name: prometheus-maia
+    - name: maia
       key: maia_scrape_config.yaml
 
   ingress:
