--- a/system/prometheus-server/values.yaml
+++ b/system/prometheus-server/values.yaml
@@ -26,11 +26,11 @@ name:
 # Defines how long data is stored. Format: `[0-9]+(ms|s|m|h|d|w|y)`
 retentionTime: 7d
 
-# Reference secrets containing additional Prometheus scrape configurations.
+# Reference a secret containing additional Prometheus scrape configurations.
 # Injecting an invalid configuration might break the Prometheus server instance.
 additionalScrapeConfigs:
-  # - name: < secret name >
-  #   key:  < key in secret >
+  # name: < secret name >
+  # key:  < key in secret >
 
 # Optional ingress for this Prometheus.
 ingress:
