fix scrape config

--- a/openstack/maia/values.yaml
+++ b/openstack/maia/values.yaml
@@ -133,8 +133,8 @@ prometheus-server:
   retentionTime: 30d
 
   additionalScrapeConfigs:
-    - name: maia
-      key: maia_scrape_config.yaml
+    name: maia
+    key: maia_scrape_config.yaml
 
   ingress:
     enabled: true
