fix scrape config

--- a/openstack/maia/templates/prometheus-config.yaml
+++ b/openstack/maia/templates/prometheus-config.yaml
@@ -5,4 +5,8 @@ metadata:
 
 data:
   prometheus.yaml: |
-{{ include "maia/templates/etc/_prometheus.yaml.tpl" . | indent 4 }}
+    global:
+      scrape_timeout: 55s
+
+    scrape_configs:
+{{ include "maia/templates/etc/_maia_scrape_config.yaml.tpl" . | indent 6 }}
