--- a/system/infra-monitoring/charts/prometheus-infra/templates/ingress.yaml
+++ b/system/infra-monitoring/charts/prometheus-infra/templates/ingress.yaml
@@ -3,16 +3,17 @@ kind: Ingress
 
 metadata:
   name: prometheus-infra
+  namespace: infra-monitoring
   annotations:
-    vice-president: {{ default false .Values.vice_president | quote }}
-    disco: {{ default false .Values.disco | quote }}
+    vice-president: {{ default false .Values.prometheus.vice_president | quote }}
+    disco: {{ default false .Values.prometheus.disco | quote }}
 
 spec:
   tls:
     - secretName: prometheus-infra
-      hosts: [{{.Values.prometheus.ingress.host}}.{{.Values.global.region}}.{{.Values.global.domain}}]
+      hosts: [{{.Values.ingress.host}}.{{.Values.global.region}}.{{.Values.global.domain}}]
   rules:
-    - host: {{.Values.prometheus.ingress.host}}.{{.Values.global.region}}.{{.Values.global.domain}}
+    - host: {{.Values.ingress.host}}.{{.Values.global.region}}.{{.Values.global.domain}}
       http:
         paths:
         - path: /
