--- a/system/infra-monitoring/charts/prometheus-infra/templates/deployment.yaml
+++ b/system/infra-monitoring/charts/prometheus-infra/templates/deployment.yaml
@@ -20,18 +20,18 @@ spec:
       terminationGracePeriodSeconds: 300
       containers:
         - name: prometheus
-          image: "{{.Values.prometheus.image}}:{{.Values.prometheus.tag}}"
+          image: "{{.Values.global.prometheus.image}}:{{.Values.global.prometheus.tag}}"
           args:
             - --config.file=/etc/prometheus/prometheus.yaml
             - --storage.tsdb.path=/prometheus
-            {{- if semverCompare ">=v2.8.0" .Values.prometheus.tag }}
+            {{- if semverCompare ">=v2.8.0" .Values.global.prometheus.tag }}
             - --storage.tsdb.retention.time={{.Values.prometheus.retention}}
             {{ else }}
             - --storage.tsdb.retention={{.Values.prometheus.retention}}
             {{- end }}
             - --web.console.libraries=/etc/prometheus/console_libraries
             - --web.console.templates=/etc/prometheus/consoles
-            - --web.external-url=https://{{.Values.prometheus.ingress.host}}.{{.Values.global.region}}.{{.Values.global.domain}}
+            - --web.external-url=https://{{.Values.ingress.host}}.{{.Values.global.region}}.{{.Values.global.domain}}
             - --web.enable-admin-api
             - --web.enable-lifecycle
             - --log.level={{ default "info" .Values.prometheus.log_level }}
@@ -48,12 +48,13 @@ spec:
               mountPath: /prometheus
             - name: config
               mountPath: /etc/prometheus
+              readOnly: true
             {{- if .Values.arista_snmp_exporter.enabled }}
             - name: arista-sd-config
               mountPath: /custom_targets/arista
             {{- end }}
         - name: prometheus-configmap-reloader
-          image: "{{ .Values.prometheus.configmap_reload.image.repository }}:{{ .Values.prometheus.configmap_reload.image.tag }}"
+          image: "{{ .Values.global.configmap_reload.image.repository }}:{{ .Values.global.configmap_reload.image.tag }}"
           args:
             - --volume-dir=/etc/prometheus
             - --webhook-url=http://localhost:9090/-/reload
@@ -67,7 +68,7 @@ spec:
             medium: Memory
         - name: config
           configMap:
-            name: prometheus-collector
+            name: prometheus-infra
         {{- if .Values.arista_snmp_exporter.enabled }}
         - name: arista-sd-config
           configMap:
