--- a/system/infra-monitoring/charts/prometheus-infra/values.yaml
+++ b/system/infra-monitoring/charts/prometheus-infra/values.yaml
@@ -1,28 +1,19 @@
 prometheus:
   image: prom/prometheus
   tag: v2.8.0
+  vice_president: false
+  disco: false
+  retention: 10d
 
-retention: 10d
 
 ingress:
   host: prometheus-infra
-
-rbac:
-  create: false
-  serviceAccountName: default
-
-openstack_sd:
-  enabled:            false
-  role:               DEFINED-IN-SECRETS
-  region:             DEFINED-IN-SECRETS
-  identity_endpoint:  DEFINED-IN-SECRETS
-  username:           DEFINED-IN-SECRETS
-  password:           DEFINED-IN-SECRETS
-  domain_name:        DEFINED-IN-SECRETS
-  project_name:       DEFINED-IN-SECRETS
-  all_tenants:        DEFINED-IN-SECRETS
 
 resources:
   requests:
     cpu: "12"
     memory: 40Gi
+
+
+arista_snmp_exporter:
+  enabled: false
