--- a/system/infra-monitoring/requirements.yaml
+++ b/system/infra-monitoring/requirements.yaml
@@ -11,7 +11,7 @@ dependencies:
     repository: file://vendor/apic_exporters
     version: 1.0.0
     condition: apic_exporters.enabled
-  - name: arista-snmp-exporter
-    repository: file://vendor/arista-snmp-exporter
-    version: 1.0.0
-    condition: arista_snmp_exporter.enabled
+#  - name: arista-snmp-exporter
+#    repository: file://vendor/arista-snmp-exporter
+#    version: 1.0.0
+#    condition: arista_snmp_exporter.enabled
