--- a/system/infra-monitoring/values.yaml
+++ b/system/infra-monitoring/values.yaml
@@ -2,9 +2,14 @@ global:
   region: DEFINED-AS-VALUE
   domain: DEFINED-AS-VALUE
 
-prometheus:
-  image: prom/prometheus
-  tag: v2.8.0
+  prometheus:
+    image: prom/prometheus
+    tag: v2.8.0
+
+  configmap_reload:
+    image:
+      repository: jimmidyson/configmap-reload
+      tag: v0.2.2
 
 cloudprober-exporter:
   enabled: false
@@ -15,6 +20,9 @@ netapp-exporter:
 apic_exporters:
   enabled: false
 
-arista_exporter:
+arista_snmp_exporter:
   enabled: false
   configmap_name: arista-sd
+
+openstack_sd:
+  enable: false
