--- a/global/concourse/values.yaml
+++ b/global/concourse/values.yaml
@@ -110,3 +110,12 @@ webhook-broadcaster:
   image: sapcc/concourse-webhook-broadcaster
   imageTag: "0.6.0"
   pullPolicy: IfNotPresent
+
+cleanup:
+  enabled: false
+  image: sapcc/concourse-ci-cleanup
+  imageTag: "0.1.0"
+  pullPolicy: IfNotPresent
+  # worker_prefix:
+  # enable_volume_cleanup: false
+  # volume_prefix:
