Land concourse worker instead of retiring

--- a/global/concourse/templates/daemonset.yaml
+++ b/global/concourse/templates/daemonset.yaml
@@ -149,7 +149,7 @@ spec:
           preStop:
             exec:
               command:
-              - "/retire-worker/pre-stop.sh"
+              - "/land-worker/pre-stop.sh"
         env:
         - name: CONCOURSE_TEAM
           value: {{ .name | quote }}
@@ -202,7 +202,7 @@ spec:
         - name: sap-root-certs 
           mountPath: /usr/local/share/ca-certificates
         - name: pre-stop
-          mountPath: /retire-worker
+          mountPath: /land-worker
       volumes:
       - name: sap-root-certs
         secret:
@@ -239,7 +239,7 @@ spec:
           path: /
       - name: pre-stop
         configMap:
-          name: retire-worker
+          name: land-worker
           defaultMode: 0755
 ---
 {{ end }}
