--- a/global/concourse/templates/land-worker-config.yaml
+++ b/global/concourse/templates/land-worker-config.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: retire-worker
+  name: land-worker
 data:
   pre-stop.sh: |-
     #!/bin/bash
     CONCOURSE_PID=$(pidof concourse)
-    kill -s SIGUSR2 ${CONCOURSE_PID}
+    kill -s SIGUSR1 ${CONCOURSE_PID}
     while kill -0 ${CONCOURSE_PID}; do
       sleep 0.1
     done
