--- a/openstack/elk/templates/elasticsearch-exporter-deployment.yaml
+++ b/openstack/elk/templates/elasticsearch-exporter-deployment.yaml
@@ -32,7 +32,7 @@ spec:
         - name: elasticsearch-exporter
           image: justwatch/elasticsearch_exporter:{{ $.Values.elk_image_version_elasticsearch_exporter }}
           imagePullPolicy: IfNotPresent
-          command: [ "/bin/elasticsearch_exporter", "--es.all", "--web.listen-address", ":{{ $.Values.elasticsearch_exporter.listen_port }}", "--es.cluster_settings" ]
+          command: [ "/bin/elasticsearch_exporter", "--es.all=true", "--web.listen-address", ":{{ $.Values.elasticsearch_exporter.listen_port }}", "--es.cluster_settings=true" ]
           ports:
             - name: metrics
               containerPort: {{ $.Values.elasticsearch_exporter.listen_port }}
