[nova] Switch cell2 postgres to image with flock
The custom image with flock protection prohibits parallel started
postgresql to both use the datadir and thus cause inconsistencies.

This is also a database patch-version update, as the old 9.5.4 is not
available as custom image.

--- a/openstack/nova/values.yaml
+++ b/openstack/nova/values.yaml
@@ -496,6 +496,8 @@ postgresql:
       idle_transaction_timeout: 60
 
 postgresql_cell2:
+  custom_repository: true
+  imageTag: "9.5.10"
   name: nova-cell2
   postgresDatabase: nova-cell2
   dbInit: nova-db-init
