default to accessMode=RWX as used in controlplane

--- a/system/prometheus-server/values.yaml
+++ b/system/prometheus-server/values.yaml
@@ -55,7 +55,7 @@ persistence:
   # name:
 
   # Access mode of the PVC.
-  accessMode: ReadWriteOnce
+  accessMode: ReadWriteMany
 
   # Size of the PVC.
   size: 100Gi
