--- a/openstack/ironic/values.yaml
+++ b/openstack/ironic/values.yaml
@@ -286,3 +286,16 @@ logging:
 
 watcher:
   enabled: false
+
+wham:
+  enabled: false
+  image:
+    repository: monsoon/wham
+    tag: 1ddd5a0b
+  metricPort: 9090
+  listenPort: 8080
+  debugLevel: "info"
+
+  os_user_domain_name: "Default"
+  os_project_name: "master"
+  os_project_domain_name: "ccadmin"
