--- a/openstack/maia/values.yaml
+++ b/openstack/maia/values.yaml
@@ -59,6 +59,8 @@ prometheus-server:
   # Store in memory.
   persistence:
     enabled: true
+    # there are not RWO volumens in controlplane
+    accessMode: ReadWriteMany
     size: 300Gi
   rbac:
     create: false
