--- a/system/prometheus-server/values.yaml
+++ b/system/prometheus-server/values.yaml
@@ -29,8 +29,15 @@ retentionTime: 7d
 # Reference a secret containing additional Prometheus scrape configurations.
 # Injecting an invalid configuration might break the Prometheus server instance.
 additionalScrapeConfigs:
-  # name: < secret name >
-  # key:  < key in secret >
+  # Name of the secret.
+  # name:
+
+  # Key in the secret.
+  # key:
+
+  # Specify whether the Secret is optional.
+  # Setting `optional: false` causes an error when the secret does not exist.
+  # optional: true
 
 # Optional ingress for this Prometheus.
 ingress:
@@ -55,7 +62,7 @@ persistence:
   # name:
 
   # Access mode of the PVC.
-  accessMode: ReadWriteMany
+  accessMode: ReadWriteOnce
 
   # Size of the PVC.
   size: 100Gi
@@ -87,5 +94,5 @@ logLevel: info
 # See: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container .
 resources:
   requests:
-    cpu: 12
-    memory: 40Gi
+    cpu: 4
+    memory: 8Gi
