add label to ingress

--- a/system/prometheus-server/templates/ingress.yaml
+++ b/system/prometheus-server/templates/ingress.yaml
@@ -4,6 +4,8 @@ kind: Ingress
 
 metadata:
   name: {{ include "prometheus.name" . }}
+  labels:
+    prometheus: {{ include "prometheus.name" . }}
   annotations:
     vice-president: {{ default true .Values.ingress.vice_president | quote }}
     disco: {{ default true .Values.ingress.disco | quote }}
