fix rbac for ingress get,list,watch

--- a/system/prometheus-server/templates/cluster-role.yaml
+++ b/system/prometheus-server/templates/cluster-role.yaml
@@ -19,6 +19,10 @@ rules:
     resources:
       - configmaps
     verbs: ["get"]
+  - apiGroups: ["extensions"]
+    resources:
+      - ingresses
+    verbs: ["get", "list", "watch"]
   - nonResourceURLs: ["/metrics"]
     verbs: ["get"]
 
