make homegrown prom optional

--- a/openstack/maia/templates/prometheus-pvc.yaml
+++ b/openstack/maia/templates/prometheus-pvc.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.prometheus.enabled }}
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
@@ -11,3 +12,4 @@ spec:
   resources:
     requests:
       storage: {{ .Values.prometheus.persistence.size | quote }}
+{{- end }}
