--- a/openstack/maia/templates/prometheus-config.yaml
+++ b/openstack/maia/templates/prometheus-config.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.prometheus.enabled }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -9,4 +10,5 @@ data:
       scrape_timeout: 55s
 
     scrape_configs:
-{{ include "maia/templates/etc/_maia_scrape_config.yaml.tpl" . | indent 6 }}
+{{- include "maia/templates/etc/_maia_scrape_config.yaml.tpl" . | indent 6 }}
+{{- end }}
