configurable maia app memory limits

--- a/openstack/maia/templates/maia-deployment.yaml
+++ b/openstack/maia/templates/maia-deployment.yaml
@@ -44,9 +44,11 @@ spec:
               value: {{ $.Values.maia.debug | quote }}
           resources:
               requests:
-                  memory: "50Mi"
+                  memory: {{ .Values.maia.resources.memory.expected }}
+                  cpu: {{ .Values.maia.resources.cpu.expected }}
               limits:
-                  memory: "100Mi"
+                  memory: {{ .Values.maia.resources.memory.tolerated }}
+                  cpu: {{ .Values.maia.resources.cpu.tolerated }}
           volumeMounts:
             - mountPath: /etc/maia
               name: maia-etc
