--- a/openstack/maia/values.yaml
+++ b/openstack/maia/values.yaml
@@ -26,6 +26,15 @@ maia:
     user_domain_name:    Default
     project_name:        service
     project_domain_name: Default
+  resources:
+    # reasonable defaults, should be reduced for small regions
+    memory:
+      expected: 100Mi
+      tolerated: 400Mi
+    cpu:
+      # currently maia is used by very few concurrent users
+      expected: "10m"
+      tolerated: "500m"
 
 prometheus:
   enabled: True
