--- a/system/kube-system/charts/vice-president/templates/deployment.yaml
+++ b/system/kube-system/charts/vice-president/templates/deployment.yaml
@@ -20,19 +20,23 @@ spec:
     spec:
       containers:
         - name: {{ .Chart.Name }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          image: {{ include "fullImage" . | quote }}
+          imagePullPolicy: {{ default "IfNotPresent" .Values.image.pullPolicy }}
           args:
             - vice-president
             - --vice-president-config=/etc/vice-president/config/vice-president.conf
             - --vice-cert=/etc/vice-president/secrets/vice.cert
             - --vice-key=/etc/vice-president/secrets/vice.key
             - --intermediate-cert=/etc/vice-president/secrets/intermediate.cert
-            - --metric-port={{default 9091 .Values.president.metricsPort}}
-            - --min-cert-validity-days={{ .Values.president.minCertValidityDays }}
-            - --enable-validate-remote-cert={{ .Values.president.enableValidateRemoteCert }}
-            - --enable-symantec-metrics={{ .Values.president.enableSymantecMetrics }}
-            - --v={{ default 1 .Values.president.logLevel }}
+            - --metric-port={{ default 9091 .Values.president.metricsPort }}
+            - --min-cert-validity-days={{ default 30 .Values.president.minCertValidityDays }}
+            - --enable-validate-remote-cert={{ default false .Values.president.enableValidateRemoteCert }}
+            - --enable-symantec-metrics={{ default false .Values.president.enableSymantecMetrics }}
+            - --certificate-recheck-interval={{ default "10m" .Values.president.certificateRecheckInterval }}
+            - --resync-interval={{ default "4m" .Values.president.resyncInterval }}
+            - --rate-limit={{ default 3 .Values.president.rateLimit }}
+            - --threadiness={{ default 10 .Values.president.threadiness }}
+            - --debug={{ default false .Values.president.debug }}
           volumeMounts:
             - name: config
               mountPath: /etc/vice-president/config
@@ -49,7 +53,7 @@ spec:
           secret:
             secretName: {{ template "name" . }}
       {{- if .Values.president.rbac.create }}
-      serviceAccount: {{ .Values.president.rbac.serviceAccountName }}
-      serviceAccountName: {{ .Values.president.rbac.serviceAccountName }}
+      serviceAccount: {{ required ".Values.president.rbac.serviceAccountName" .Values.president.rbac.serviceAccountName }}
+      serviceAccountName: {{ required ".Values.president.rbac.serviceAccountName" .Values.president.rbac.serviceAccountName }}
       {{- end }}
 {{- end}}
