--- a/system/kube-system/charts/vice-president/templates/rolebinding.yaml
+++ b/system/kube-system/charts/vice-president/templates/rolebinding.yaml
@@ -11,6 +11,6 @@ roleRef:
   name: {{ template "name" . }}
 subjects:
   - kind: ServiceAccount
-    name: {{ .Values.president.rbac.serviceAccountName }}
+    name: {{ required ".Values.president.rbac.serviceAccountName" .Values.president.rbac.serviceAccountName }}
     namespace: kube-system
 {{- end -}}
