--- a/system/kube-monitoring/charts/prometheus-frontend-operated/Chart.yaml
+++ b/system/kube-monitoring/charts/prometheus-frontend-operated/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 appVersion: "1.0"
-description: Prometheus Collector.
-name: prometheus-collector-operated
+description: Prometheus Frontend.
+name: prometheus-frontend-operated
 version: 0.1.0
