[ironic] fixes wham deployment chart

--- a/openstack/ironic/templates/wham-deplyoment.yaml
+++ b/openstack/ironic/templates/wham-deplyoment.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.wham.enabled }}
-apiVersion: apps/v1beta2
+apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
     app: wham
