[ironic] fixes wham port value

--- a/openstack/ironic/templates/wham-deplyoment.yaml
+++ b/openstack/ironic/templates/wham-deplyoment.yaml
@@ -33,7 +33,7 @@ spec:
             - --listen-port={{ .Values.wham.listenPort }}
         ports:
         - name: http
-          containerPort: {{ .Values.listenPort }}
+          containerPort: {{ .Values.wham.listenPort }}
           protocol: TCP
         - name: metrics
           containerPort: {{ .Values.wham.metricPort }}
