remove duplicate entries

--- a/openstack/maia/templates/prometheus-config.yaml
+++ b/openstack/maia/templates/prometheus-config.yaml
@@ -10,5 +10,5 @@ data:
       scrape_timeout: 55s
 
     scrape_configs:
-{{- include "maia/templates/etc/_maia_scrape_config.yaml.tpl" . | indent 6 }}
+{{ include "maia/templates/etc/_maia_scrape_config.yaml.tpl" . | indent 6 }}
 {{- end }}
