--- a/openstack/maia/values.yaml
+++ b/openstack/maia/values.yaml
@@ -49,52 +49,6 @@ prometheus-server:
   retentionTime: 30d
 
   additionalScrapeConfigs:
-    - name: prometheus-maia
-      key: maia-scrape-config.yaml
-
-  ingress:
-    enabled: true
-    host: maia-prometheus-collector
-
-  # Store in memory.
-  persistence:
-    enabled: true
-    # there are not RWO volumens in controlplane
-    accessMode: ReadWriteMany
-    size: 300Gi
-  rbac:
-    create: false
-
-  serviceAccount:
-    create: false
-    name: default
-
-  # The log level of the Prometheus.
-  logLevel: debug 
-
-  # Kubernetes resource requests and limits for this Prometheus.
-  # Flagship configuration for now.
-  resources:
-    requests:
-      cpu: 2
-      memory: 8Gi
-    limits:
-      cpu: 4
-      memory: 16Gi
-
-<<<<<<< HEAD
-=======
-# this is the new reused prometheus
-prometheus-server:
-  image:
-    repository: prom/prometheus
-    tag: v2.8.0
-
-  name: maia-collector
-
-  retentionTime: 30d
-
-  additionalScrapeConfigs:
     name: maia
     key: maia_scrape_config.yaml
 
@@ -102,7 +56,7 @@ prometheus-server:
     enabled: true
     host: maia-prometheus-collector
 
-  # Store in memory.
+  # Store on disk
   persistence:
     enabled: true
     # there are not RWO volumens in controlplane
@@ -116,7 +70,7 @@ prometheus-server:
     name: default
 
   # The log level of the Prometheus.
-  logLevel: info
+  logLevel: debug
 
   # Kubernetes resource requests and limits for this Prometheus.
   # Flagship configuration for now.
@@ -128,7 +82,6 @@ prometheus-server:
       cpu: 4
       memory: 16Gi
 
->>>>>>> 266fee5483b7f1b781a0085d877c4a77dfc5ebae
 # this is the old homegrown prometheus
 prometheus:
   enabled: True
