--- a/openstack/ironic/charts/wham/values.yaml
+++ b/openstack/ironic/charts/wham/values.yaml
@@ -1,6 +1,6 @@
-image:
-    repository: monsoon/wham
-    tag: 1ddd5a0b
+enabled: false
+imageRepository: monsoon/wham
+imageTag: 1ddd5a0b
 metricPort: 9090
 listenPort: 8080
 debugLevel: "info"
