[ironic] bumps wham img version

--- a/openstack/ironic/charts/wham/templates/wham-deplyoment.yaml
+++ b/openstack/ironic/charts/wham/templates/wham-deplyoment.yaml
@@ -49,12 +49,12 @@ spec:
           value: "{{ .Values.global.ipmi_exporter_user }}"
         - name: OS_PASSWORD
           value: "{{ .Values.global.ipmi_exporter_user_passwd }}"
-        - name: OS_USER_DOMAIN_NAME
+        - name: OS_DOMAIN_NAME
           value: "{{ .Values.os_user_domain_name }}"
         - name: OS_PROJECT_NAME
           value: "{{ .Values.os_project_name }}"
         - name: OS_PROJECT_DOMAIN_NAME
           value: "{{ .Values.os_project_domain_name }}"
-        - name: REGION
+        - name: OS_REGION_NAME
           value: "{{ .Values.global.region }}"
 {{- end }}
