configurable alertmanagers, extra configmaps

--- a/system/prometheus-server/values.yaml
+++ b/system/prometheus-server/values.yaml
@@ -39,6 +39,17 @@ additionalScrapeConfigs:
   # Setting `optional: false` causes an error when the secret does not exist.
   # optional: true
 
+# List of configmaps in the same namespace as the Prometheus that should be mounted to /etc/prometheus/configmaps/<configmap-name>.
+# Can be used to add targets found by a custom service discovery.
+configMaps: []
+  # - < name of configmap >
+
+# List of Alertmanagers (AM) to send alerts to.
+# If multiple AMs are used in HA, alerts must be send to every AM.
+alertmanagers: []
+  # - alertmanager1.tld
+  # - alertmanager2.tld
+
 # Optional ingress for this Prometheus.
 ingress:
   enabled: false
