--- a/system/prometheus-server/templates/prometheus-server.yaml
+++ b/system/prometheus-server/templates/prometheus-server.yaml
@@ -47,6 +47,19 @@ spec:
 {{ toYaml .Values.additionalScrapeConfigs | indent 4}}
   {{- end }}
 
+  {{ if .Values.configMaps }}
+  # Mount additional configmaps from the same namespace.
+  configMaps:
+{{ toYaml .Values.configMaps | indent 4 }}
+  {{- end }}
+
+  {{ if .Values.alertmanagers -}}
+  # Alertmanager configuration.
+  additionalAlertManagerConfigs:
+    name: {{ include "prometheus.name" . }}-alertmanager-config
+    key: config.yaml
+  {{- end }}
+
   {{- if .Values.ingress.host -}}
   # The external URL of the Prometheus.
   externalUrl: https://{{ include "prometheus.externalURL" . }}
