[ironic] adds configmap to wham

--- a/openstack/ironic/charts/wham/templates/deplyoment.yaml
+++ b/openstack/ironic/charts/wham/templates/deplyoment.yaml
@@ -57,4 +57,12 @@ spec:
           value: "{{ .Values.os_project_domain_name }}"
         - name: OS_REGION_NAME
           value: "{{ .Values.global.region }}"
+        volumeMounts:
+        - name: config
+          mountPath: /etc/config
+          readOnly: true
+      volumes:
+        - name: config
+          configMap:
+            name: {{ include "wham.fullname" . }}
 {{- end }}
