--- a/system/prometheus-server/templates/prometheus-server.yaml
+++ b/system/prometheus-server/templates/prometheus-server.yaml
@@ -76,7 +76,16 @@ spec:
   storage:
     {{- if .Values.persistence.enabled }}
     volumeClaimTemplate:
-      claimName: {{ include "pvc.name" . }}
+      metadata:
+        name: {{ include "pvc.name" . }}
+        labels:
+          prometheus: {{ include "prometheus.name" . }}
+      spec:
+        accessModes:
+          - {{ required ".Values.persistence.accessMode missing" .Values.persistence.accessMode | quote }}
+        resources:
+          requests:
+            storage: {{ required ".Values.persistence.size missing" .Values.persistence.size | quote }}
     {{ else }}
     emptyDir:
       medium: Memory
