Disable garden dns proxy, bump to webhook-broadcaster 0.6.1

--- a/global/concourse/templates/daemonset.yaml
+++ b/global/concourse/templates/daemonset.yaml
@@ -183,6 +183,8 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: spec.nodeName
+        - name: CONCOURSE_GARDEN_DNS_PROXY_ENABLE
+          value: "false"
 {{- if $.Values.worker.env }}
 {{ toYaml $.Values.worker.env | indent 12 }}
 {{- end }}
