initial commit for prometheus-infra via operator

--- a/system/infra-monitoring/requirements.yaml
+++ b/system/infra-monitoring/requirements.yaml
@@ -11,7 +11,11 @@ dependencies:
     repository: file://vendor/apic_exporters
     version: 1.0.0
     condition: apic_exporters.enabled
-#  - name: arista-snmp-exporter
-#    repository: file://vendor/arista-snmp-exporter
-#    version: 1.0.0
-#    condition: arista_snmp_exporter.enabled
+  - name: arista-snmp-exporter
+    repository: file://vendor/arista-snmp-exporter
+    version: 1.0.0
+    condition: arista_snmp_exporter.enabled
+  - name: prometheus-infra
+    repository: file://vendor/prometheus-infra
+    version: 0.1.0
+    condition: prometheus-infra.enabled
