parametrize git content location

--- a/openstack/grafanasix/templates/grafana-deployment.yaml
+++ b/openstack/grafanasix/templates/grafana-deployment.yaml
@@ -58,8 +58,8 @@ spec:
           image: hub.global.cloud.sap/monsoon/git-sync:v3_1_1__linux_amd64
           imagePullPolicy: {{.Values.image.pullPolicy}}
           args:
-            - "--repo=https://github.wdf.sap.corp/cc/grafana-content"
-            - "--branch=testing"
+            - "--repo={{.Values.grafana.gitsync.repository}}"
+            - "--branch={{.Values.grafana.gitsync.branch}}"
             - "--wait=30"
           env:
             - name: GIT_SSL_NO_VERIFY
