make maia-prom name shorter

--- a/openstack/maia/values.yaml
+++ b/openstack/maia/values.yaml
@@ -44,7 +44,7 @@ prometheus-server:
     repository: prom/prometheus
     tag: v2.8.0
 
-  name: maia-prometheus-collector
+  name: maia-prometheus
 
   retentionTime: 30d
 
