add way more headroom to maia memory limit (spikes)

--- a/openstack/maia/values.yaml
+++ b/openstack/maia/values.yaml
@@ -30,7 +30,7 @@ maia:
     # reasonable defaults, should be reduced for small regions
     memory:
       expected: 100Mi
-      tolerated: 400Mi
+      tolerated: 1Gi
     cpu:
       # currently maia is used by very few concurrent users
       expected: "10m"
