Two new roles for security group administration:
securitygroup_viewer -> can show / list security groups and their rules
securitygroup_admin -> can create / update / delete security groups and security group rules

--- a/openstack/neutron/templates/seed.yaml
+++ b/openstack/neutron/templates/seed.yaml
@@ -28,6 +28,8 @@ spec:
   - network_viewer
   - cloud_network_admin
   - cloud_compute_admin
+  - securitygroup_viewer
+  - securitygroup_admin
 
   services:
   - name: neutron
