--- a/openstack/ironic/charts/wham/templates/configmap.yaml
+++ b/openstack/ironic/charts/wham/templates/configmap.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.enabled }}
 apiVersion: v1
 kind: ConfigMap
 
@@ -13,3 +14,4 @@ data:
   wham.yaml: |
     handlers:
       - "baremetal"
+{{- end }}
