[ironic] adds missing host to wham tls ingress

--- a/openstack/ironic/charts/wham/templates/ingress.yaml
+++ b/openstack/ironic/charts/wham/templates/ingress.yaml
@@ -17,6 +17,7 @@ metadata:
 spec:
   tls:
     - hosts:
+      - {{ required "missing externalURL" .Values.externalURL }}
       secretName: tls-{{ required "missing externalURL" .Values.externalURL | replace "." "-" }}
   rules:
     - host: {{ required "missing externalURL" .Values.externalURL }}
