--- a/openstack/neutron/templates/vct-dvs-agent-configmap.yaml
+++ b/openstack/neutron/templates/vct-dvs-agent-configmap.yaml
@@ -34,4 +34,7 @@ template: |
       vsphere_password = {= password | quote =}
 
       network_maps = "{= physical | ini_escape =}:{= bridge | ini_escape =}"
+      
+      [DVS]
+      portgroup_retention_iterations = 50
 {{ end }}
