--- a/system/prometheus-server/templates/prometheus-server.yaml
+++ b/system/prometheus-server/templates/prometheus-server.yaml
@@ -102,3 +102,9 @@ spec:
   resources:
 {{ toYaml .Values.resources | indent 4 }}
   {{ end }}
+
+  {{ if .Values.securityContext }}
+  # A security context defines privilege and access control settings for a Pod or Container.
+  securityContext:
+{{ toYaml .Values.securityContext | indent 4 }}
+  {{ end }}
