--- a/system/prometheus-server/values.yaml
+++ b/system/prometheus-server/values.yaml
@@ -107,3 +107,9 @@ resources:
   requests:
     cpu: 4
     memory: 8Gi
+
+# A security context defines privilege and access control settings for a Pod or Container.
+# See: https://kubernetes.io/docs/tasks/configure-pod-container/security-context .
+securityContext:
+  fsGroup: 0
+  runAsUser: 0
